--- a/AuthServiceOAuth/appsettings.json
+++ b/AuthServiceOAuth/appsettings.json
@@ -15,10 +15,18 @@
     "RefreshTokenExpiryDays": 7
   },
   "ConnectionStrings": {
-    "UserDatabase": "Server=vithu\\SQLEXPRESS03;Database=AuthProfiles;Trusted_Connection=true;TrustServerCertificate=true;"
+    "UserDatabase": "Server=vithu\\SQLEXPRESS03;Database=OAuthProfiles;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "GoogleSettings": {
     "ClientId": "533975288092-c98thhnpsumukf9lch96miuaql542e9m.apps.googleusercontent.com",
-    "ClientSecret": "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"
+    "ClientSecret": "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"
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "FromEmail": "vithus1912@gmail.com",
+    "FromName": "Book App OTP",
+    "Username": "vithus1912@gmail.com",
+    "Password": "nkvj nuch bzsp zvao"
   }
 }
