--- a/AuthServiceOAuth/Properties/launchSettings.json
+++ b/AuthServiceOAuth/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5298"
+      "applicationUrl": "http://localhost:5001"
     },
     "https": {
       "commandName": "Project",
@@ -14,13 +14,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7081;http://localhost:5298"
+      "applicationUrl": "https://localhost:5001"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTPS_PORTS": "6001",
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
       "publishAllPorts": true,
