--- a/AuthServiceOAuth/Dockerfile
+++ b/AuthServiceOAuth/Dockerfile
@@ -5,16 +5,17 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["AuthService/AuthService.csproj", "AuthService/"]
-RUN dotnet restore "AuthService/AuthService.csproj"
+COPY ["OAuthAuth/OAuthAuth.csproj", "OAuthAuth/"]
+RUN dotnet restore "OAuthAuth/OAuthAuth.csproj"
 COPY . .
-WORKDIR "/src/AuthService"
-RUN dotnet build "AuthService.csproj" -c Release -o /app/build
+WORKDIR "/src/OAuthAuth"
+RUN dotnet build "OAuthAuth.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "AuthService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "OAuthAuth.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "AuthService.dll"]
+ENTRYPOINT ["dotnet", "OAuthAuth.dll"]
+```
